tests/m3/hopix/typechecker/bad/litpatterns2.hopix
val x : int = "Darth" ? { "Yoda" => 0 | 0 => 1 | (_ : string) => 2 }